--- a/assets/style.css
+++ b/assets/style.css
@@ -437,9 +437,9 @@ p {
   background-size: cover;
 }
 
-.project__image.project__image--marioplan {
+.project__image.project__image--url-shortener {
   box-shadow: inset 0 0 100px black;
-  background: url(img/marioplan.jpg) no-repeat 50% 50%;
+  background: url(img/url-shortener.jpg) no-repeat 50% 50%;
   background-size: cover;
 }
 
